fix bug missing js file

--- a/admin-page/views/product/product.ejs
+++ b/admin-page/views/product/product.ejs
@@ -54,7 +54,8 @@
                               <tr>
                                 <td><%= listProduct[i].productID%></td>
                                 <td><%= listProduct[i].productName%></td>
-                                <td><%= listProduct[i].productName%></td>
+                              
+                                <td><%= listProduct[i].subCategoryName%></td>
                                 <td><%= listProduct[i].manufacturer%></td>                            
                                 <td><img width="50px" height="50px" src="<%= listProduct[i].image %>"/></td>
                                 <td><%= listProduct[i].description%></td>
