--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -149,7 +149,7 @@
             </div>
   
             <div class="modal-body">
-                <form action="#" method="POST">
+                <form  method="POST" >
                     <div class="form-group">
                         <label for="id" class="control-label">ID:</label>
                         <input type="number" class="form-control" id="deluserid"  readonly>
@@ -190,6 +190,41 @@
                     </div>
                   
                     <button type="button" class="btn btn-info" data-dismiss="modal">Thêm</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                </form>
+            </div>
+  
+        </div>
+    </div>
+  </div>
+
+
+
+
+  <!-- ################################# PRODUCT ################################# -->
+
+  <div id="dlgdeleteproduct" class="modal fade" role="dialog">
+    <div class="modal-dialog"  style="padding-top: 10%;">
+  
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Xóa Sản Phẩm</h4>
+            </div>
+  
+            <div class="modal-body">
+                <form action="#" method="POST" id="formDeleteProduct">
+                    <div class="form-group">
+                        <label for="del_productID" class="control-label">ID:</label>
+                        <input type="number" class="form-control" name="productID" id="del_productID"  readonly required>
+                    </div>
+                    <div class="form-group">
+                        <label for="del_productName" class="control-label">Tên Sản Phẩm:</label>
+                        <input type="text" class="form-control" name="productName" id="del_productName" readonly>
+                    </div>
+                  
+                    <button type="submit" onclick="deleteProduct();return false;" class="btn btn-danger" data-dismiss="modal">Xóa</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
