--- a/admin-page/views/common/script.ejs
+++ b/admin-page/views/common/script.ejs
@@ -18,7 +18,6 @@
 <script src="../../bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
 <script src="../../bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 
-
 <!-- wrap word in datatable cell -->
 <script src="https://cdn.datatables.net/plug-ins/1.10.19/dataRender/ellipsis.js"></script>
 
@@ -154,5 +153,23 @@
       document.getElementById('productquantity').value = '';
       document.getElementById('productprice').value = '';
 
+   }
+
+   // ################################# PRODUCT #################################
+   function onShowDeleteProduct(id, name) {
+      document.getElementById('del_productID').value = id;
+      document.getElementById('del_productName').value = name;
+   }
+
+   function deleteProduct(){
+   
+      const data = serialFormToJSon("#formDeleteProduct");
+      console.log(data);
+   }
+
+   // ####################################################################
+
+   function serialFormToJSon(form){
+      return $(form).serializeArray().reduce((acc, next) => ({ ...acc, [next.name]: next.value }), {});
    }
 </script>
