--- a/admin-page/views/product/product.ejs
+++ b/admin-page/views/product/product.ejs
@@ -10,110 +10,44 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
 
-     <!-- Main content -->
-     <section class="content">
-        <%if (isLoading == true) { %>
-          <div id="loader"></div>
-          <div style="position: absolute;left: 47%;top:47%;width:50px;height:50px;"><p>Loading...</p></div>
-          <% } %>
-        
-      <!-- <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div> -->
+      <!-- Main content -->
+      <section class="content">
 
-      <div id="products">
-        <div class="row">
-          <div class="col-xs-12">
-            
-            <div class="box">
-              <div class="box-header">
-                <h3 class="box-title">Danh Sách Sản Phẩm</h3>
-                <a href="#" class="btn btn-sm btn-info btn-flat pull-right"
-                data-toggle="modal" data-target="#dlginsertproduct"
-                >Thêm Sản Phẩm Mới</a>
-              </div>
-              
-              <div class="box-body">
-                <table id="productTable" class="table table-bordered table-striped table-hover">
-                  <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Tên Sản Phẩm</th>
-                    <th>Loại Sản Phẩm</th>
-                    <th>Nhà Sản Xuất</th>
-                    <th>Hình Ảnh</th>
-                    <th>Mô Tả</th>
-                    <th>Giá Nhập</th>
-                    <th>Giá Bán</th>
-                    <th>Số Lượng</th>
-                    <th>Trạng Thái</th>
-                    <th>Cập Nhật</th>
-                    <th>Xóa</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                      <% for(var i=0; i < listProduct.length; i++) {%>
-                              <tr>
-                                <td><%= listProduct[i].productID%></td>
-                                <td><%= listProduct[i].productName%></td>
-                                
-                                <%if (listProduct[i].subCategoryName == null) { %>
-                                  <td><%= listProduct[i].categoryName%></td>
-                                  <% } else{ %>  %>
-                                    <td><%= listProduct[i].subCategoryName%></td>
-                                <% } %>
-                                
-                                <td><%= listProduct[i].manufacturer%></td>                            
-                                <td><img width="64px" height="64px" src="<%= listProduct[i].image %>"/></td>
-                                <td><span><%= listProduct[i].description%></span></td>
-                            
-                                <td><%= listProduct[i].importPrice%></td>
-                                <td><%= listProduct[i].sellPrice%></td>
-                                <td><%= listProduct[i].quantity%></td>
-                                <td><%= listProduct[i].isActive%></td>
-                                <td><Button class="btn btn-block btn-primary btn-sm"
-                                  data-toggle="modal" data-target="#dlgdeleteproduct"
-                                  >Chỉnh Sửa</Button></td>
-                                <td><Button class="btn btn-block btn-danger btn-sm"
-                                  data-toggle="modal" data-target="#dlgdeleteproduct"
-                                  onclick="onShowDeleteProduct('<%= listProduct[i].productID%>','<%= listProduct[i].productName%>')"
-                                  >Xóa</Button></td>
-                              </tr>
-                            <% } %>
-                  <!-- <tr>
-                    <td>1</td>
-                    <td>Áo</td>
-                    <td>3</td>
-                    <td>50</td>
-                    <td><Button class="btn btn-block btn-danger btn-sm"
-                      data-toggle="modal" data-target="#dlgdeletebooth"
-                      onclick="onShowDeleteBooth(1,'Áo');">Xóa</Button></td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>Quần</td>
-                    <td>4</td>
-                    <td>55</td>
-                    <td><Button class="btn btn-block btn-danger btn-sm"
-                      data-toggle="modal" data-target="#dlgdeletebooth"
-                      onclick="onShowDeleteBooth(2,'Quần');"
-                      >Xóa</Button></td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>Nón</td>
-                    <td>2</td>
-                    <td>35</td>
-                    <td><Button class="btn btn-block btn-danger btn-sm"
-                      data-toggle="modal" data-target="#dlgdeletebooth"
-                      onclick="onShowDeleteBooth(3,'Nón');">Xóa</Button></td>
-                  </tr> -->
-                  
-                  </tfoot>
-                </table>
-              </div>
-              <!-- /.box-body -->
-            </div>
+        <div id="products">
+          <div class="row">
+            <div class="col-xs-12">
 
-            <!-- <div class="box">
+              <div class="box">
+                <div class="box-header">
+                  <h3 class="box-title">Danh Sách Sản Phẩm</h3>
+                  <a href="#" class="btn btn-sm btn-info btn-flat pull-right" data-toggle="modal"
+                    data-target="#dlginsertproduct">Thêm Sản Phẩm Mới</a>
+                </div>
+
+                <div class="box-body">
+                  <table id="productTable" class="table table-bordered table-striped table-hover">
+                    <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Tên Sản Phẩm</th>
+                        <th>Loại Sản Phẩm</th>
+                        <th>Nhà Sản Xuất</th>
+                        <th>Hình Ảnh</th>
+                        <th>Mô Tả</th>
+                        <th>Giá Nhập</th>
+                        <th>Giá Bán</th>
+                        <th>Số Lượng</th>
+                        <th>Trạng Thái</th>
+                        <th>Cập Nhật</th>
+                        <th>Xóa</th>
+                      </tr>
+                    </thead>
+                  </table>
+                </div>
+                <!-- /.box-body -->
+              </div>
+
+              <!-- <div class="box">
               <div class="box-header">
                 <h3 class="box-title">Danh Sách Sản Phẩm Thuộc Gian Hàng Trên</h3>
                 <a href="#" class="btn btn-sm btn-info btn-flat pull-right"
@@ -265,11 +199,11 @@
                 </table>
               </div>
             </div> -->
+            </div>
           </div>
         </div>
-      </div>
 
-    </section>
+      </section>
 
     </div>
     <%include ../common/dialogs%>
