--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -72,6 +72,7 @@
             <ul class="treeview-menu">
               <li><a href="/category"><i class="fa fa-tags"></i>Loại Sản Phẩm</a></li>
               <li><a href="/product"><i class="fa fa-cart-plus"></i>Danh Sách Sản Phẩm</a></li>
+              <li><a href="/promotion"><i class="fa fa-ticket"></i>Chương Trình Khuyến Mãi</a></li>
               <li><a href="/order"><i class="fa fa-copy"></i> Tình Trạng Đơn Hàng</a></li>
             </ul>
           </li>
