--- a/admin-page/views/promotion/promotion.ejs
+++ b/admin-page/views/promotion/promotion.ejs
@@ -19,24 +19,21 @@
 
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">Danh Sách Sản Phẩm</h3>
+                  <h3 class="box-title">Danh Sách Chương Trình Khuyến Mãi</h3>
                   <a href="#" class="btn btn-sm btn-info btn-flat pull-right" data-toggle="modal"
-                    data-target="#dlginsertproduct">Thêm Sản Phẩm Mới</a>
+                    data-target="#dlginsertpromotion">Thêm Chương Trình Khuyến Mãi Mới</a>
                 </div>
 
                 <div class="box-body">
-                  <table id="productTable" class="table table-bordered table-striped table-hover">
+                  <table id="promotionTable" class="table table-bordered table-striped table-hover">
                     <thead>
                       <tr>
                         <th>ID</th>
-                        <th>Tên Sản Phẩm</th>
-                        <th>Loại Sản Phẩm</th>
-                        <th>Nhà Sản Xuất</th>
-                        <th>Hình Ảnh</th>
-                        <th>Mô Tả</th>
-                        <th>Giá Nhập</th>
-                        <th>Giá Bán</th>
-                        <th>Số Lượng</th>
+                        <th>Tên Chương Trình Khuyến Mãi</th>
+                        <th>Tên Sản Phẩm Áp Dụng</th>
+                        <th>Phần Trăm Khuyến Mãi</th>
+                        <th>Thời Gian Bắt Đầu</th>
+                        <th>Thời Gian Kết Thúc</th>
                         <th>Trạng Thái</th>
                         <th>Cập Nhật</th>
                         <th>Xóa</th>
@@ -57,11 +54,10 @@
     <%include ../common/script%>
 
     <script>
-        $(function () {
-            loadProduct();
-        });
-      </script>
-
+      $(function () {
+          loadPromotion();
+      });
+    </script>
 </body>
 
 </html>
